maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:18: error: ')' expected but '}' found.
      }
      ^